Implement deserialize method in TextSerializer class. Without inner classes handling(all inner classes fields been null after data deserialization).